--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ h2 {
 
 .hero-section .button::after {
     content: '' ;
-    background: url("./arrow-curve.svg");
+    background: url("./imagens/arrow-curve.svg");
     position: absolute;
     top: 5rem;
     right: -4rem;
@@ -104,7 +104,7 @@ h2 {
 
 .decoration::after {
     content: "";
-    background: url("./three-dashes.svg");
+    background: url("./imagens/three-dashes.svg");
     position: absolute;
     top: -0.75rem;
     height: 36px;
